--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,6 +7,7 @@ click==8.2.1
 colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
+easyocr==1.7.2
 facenet-pytorch==2.6.0
 filelock==3.18.0
 Flask==3.1.1
@@ -34,8 +35,10 @@ ml_dtypes==0.5.1
 mpmath==1.3.0
 namex==0.1.0
 networkx==3.4.2
+ninja==1.11.1.4
 numpy==1.26.4
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
@@ -44,8 +47,10 @@ pillow==10.2.0
 protobuf==5.29.5
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pyclipper==1.3.0.post6
 Pygments==2.19.1
 pyparsing==3.2.3
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
@@ -53,6 +58,7 @@ requests==2.32.3
 rich==14.0.0
 scikit-image==0.25.2
 scipy==1.15.3
+shapely==2.1.1
 six==1.17.0
 sympy==1.14.0
 tensorboard==2.19.0
